Save my local Changes

--- a/templates/distributor/d_all_distributor.html
+++ b/templates/distributor/d_all_distributor.html
@@ -40,7 +40,14 @@
                             No Image
                             {% endif %}
                             </div>
-
+                            <!-- Distributor Online or Offline Status -->
+                            <div class="status-dot mt-2">
+                                {% if distributor.online_status %}
+                                    <span class="green-dot"></span> Online
+                                {% else %}
+                                    <span class="red-dot"></span> Offline
+                                {% endif %}
+                            </div>
                             <!-- Manager Info -->
                             <div class="manager-info mt-3">
                                 <h5 class="card-title">{{ distributor.name }}</h5>
@@ -59,6 +66,23 @@
             {% endif %}
             {% endfor %}
         </div>
+        <style>
+            .green-dot {
+                width: 10px;
+                height: 10px;
+                border-radius: 50%;
+                background-color: green;
+                display: inline-block;
+            }
+        
+            .red-dot {
+                width: 10px;
+                height: 10px;
+                border-radius: 50%;
+                background-color: red;
+                display: inline-block;
+            }
+        </style>
     </main>
 
 {% include 'admin/admin_footer.html' %}
