--- a/templates/admin/admin_header.html
+++ b/templates/admin/admin_header.html
@@ -8,11 +8,20 @@
         <meta name="author" content="" />
         <title>Dashboard - Admin</title>
         <!-- Add Bootstrap CSS link -->
-        
         <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
         <link href="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/style.min.css" rel="stylesheet" />
         <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet" />
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
+        <style>
+            /* Style for the green dot */
+            .green-dot {
+                width: 10px;
+                height: 10px;
+                border-radius: 50%;
+                background-color: green;
+                display: inline-block;
+            }
+        </style>
     </head>
     <body class="sb-nav-fixed">
         <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
@@ -45,7 +54,12 @@
                 <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion">
                     <div class="sb-sidenav-menu">
                         <div class="nav">
-                            <p class="text-center"><b>Welcome !<br> {{ user_name }}</b></p>
+                            <p class="text-center">
+                                <b>Welcome !<br> {{ user_name }}</b><br>
+                                {% if role == 'Admin' %}
+                                    <span class="green-dot"></span>
+                                {% endif %}
+                            </p>                            
                             <div class="sb-sidenav-menu-heading">Core</div>
                                 <a class="nav-link" href="{{ url_for('admin_bp.admin_dashboard')}}">
                                     <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
@@ -126,8 +140,9 @@
                         </div>
 
                         <div class="sb-sidenav-footer">
-                        <div class="small">Logged in as:</div>
-                        {{ role }}
+                            <div class="small">Logged in as:</div>
+                            {{ role }}
+                        </div>
                     </div>
                 </nav>
             </div>
