--- a/templates/super_distributor/sd_all_distributor.html
+++ b/templates/super_distributor/sd_all_distributor.html
@@ -40,6 +40,13 @@
                                 No Image
                                 {% endif %}
                             </div>
+                            <div class="status-dot mt-2">
+                                {% if sd.online_status %}
+                                    <span class="green-dot"></span> Online
+                                {% else %}
+                                    <span class="red-dot"></span> Offline
+                                {% endif %}
+                            </div>
 
                             <!-- Manager Info -->
                             <div class="manager-info mt-3">
@@ -59,6 +66,23 @@
             {% endif %}
             {% endfor %}
         </div>
+        <style>
+            .green-dot {
+                width: 10px;
+                height: 10px;
+                border-radius: 50%;
+                background-color: green;
+                display: inline-block;
+            }
+        
+            .red-dot {
+                width: 10px;
+                height: 10px;
+                border-radius: 50%;
+                background-color: red;
+                display: inline-block;
+            }
+        </style>
     </main>
 
 {% include 'admin/admin_footer.html' %}
