--- a/templates/distributor/d_index.html
+++ b/templates/distributor/d_index.html
@@ -9,63 +9,59 @@
                             <li class="breadcrumb-item active">Dashboard</li>
                         </ol>
                         <div class="row">
-                            <div class="col-xl-3 col-md-6">
-                                <div class="card bg-primary text-white mb-4">
-                                    <div class="card-body">Today's Report</div>
+                            <div class="col-lg-3 col-md-6">
+                                <div class="card bg-success text-white fixed-card mb-4">
+                                    <div class="card-body"><b>Kitchens</b></div>
                                     <div class="card-footer d-flex align-items-center justify-content-between">
-                                        <a class="small text-white stretched-link" href="#">View Details</a>
+                                        <h4 class="mb-0">{{ kitchen_count }}</h4>
+                                        <div class="small text-white"><i class="fas fa-utensils"></i></div>
+                                        <a class="small text-white stretched-link" href="{{ url_for('distributor.distrubutor_all_kitchens') }}">View Details</a>
                                         <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-3 col-md-6">
-                                <div class="card bg-secondary text-white mb-4">
-                                    <div class="card-body">Yesterday's Report</div>
+
+                            <!-- Total Orders -->
+                            <div class="col-lg-3 col-md-6">
+                                <div class="card bg-secondary text-white fixed-card mb-4">
+                                    <div class="card-body"><b>Total Orders</b></div>
                                     <div class="card-footer d-flex align-items-center justify-content-between">
-                                        <a class="small text-white stretched-link" href="#">View Details</a>
+                                        <h4 class="mb-0">{{ order_count }}</h4>
+                                        <div class="small text-white"><i class="fas fa-box"></i></div>
+                                        <a class="small text-white stretched-link" href="{{ url_for('distributor.distributor_orders') }}">View Details</a>
                                         <div class="small text-white"><i class="fas fa-angle-right"></i></div>
                                     </div>
                                 </div>
                             </div>
-                            <div class="col-xl-3 col-md-6">
-                                <div class="card bg-success text-white mb-4">
-                                    <div class="card-body">Current Month's Report</div>
+
+                            <div class="col-lg-3 col-md-6">
+                                <div class="card bg-primary text-white fixed-card mb-4">
+                                    <div class="card-body"><b>Total Sales</b></div>
                                     <div class="card-footer d-flex align-items-center justify-content-between">
-                                        <a class="small text-white stretched-link" href="#">View Details</a>
-                                        <div class="small text-white"><i class="fas fa-angle-right"></i></div>
+                                        <h4 class="mb-0">₹{{ total_price }}</h4>
+                                        <div class="small text-white"><i class=""></i></div>
+                                        <!--<a class="small text-white stretched-link" href="">View Details</a>
+                                        <div class="small text-white"><i class="fas fa-angle-right"></i></div>  -->
                                     </div>
                                 </div>
-                            </div>
-                            <div class="col-xl-3 col-md-6">
-                                <div class="card bg-info text-white mb-4">
-                                    <div class="card-body">Current Year's Report</div>
-                                    <div class="card-footer d-flex align-items-center justify-content-between">
-                                        <a class="small text-white stretched-link" href="#">View Details</a>
-                                        <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                                    </div>
-                                </div>
-                            </div>
+                            </div> 
                         </div>
+
                         <div class="row">
-                            <div class="col-xl-6">
-                                <div class="card mb-4">
-                                    <div class="card-header">
-                                        <i class="fas fa-chart-area me-1"></i>
-                                        Area Chart Example
-                                    </div>
-                                    <div class="card-body"><canvas id="myAreaChart" width="100%" height="40"></canvas></div>
-                                </div>
-                            </div>
-                            <div class="col-xl-6">
-                                <div class="card mb-4">
-                                    <div class="card-header">
-                                        <i class="fas fa-chart-bar me-1"></i>
-                                        Bar Chart Example
-                                    </div>
-                                    <div class="card-body"><canvas id="myBarChart" width="100%" height="40"></canvas></div>
-                                </div>
-                            </div>
+                            <div class="row">
+                            <div class="col-md border">
+                        <h3>Kitchen Orders</h3>
+                        <img src="data:image/png;base64,{{ bar_chart }}" alt="Kitchen Orders Bar Chart">
+                             </div>
+                             <div class="col-md"></div>
+                             <div class="col-md border">  
+                        <h3>Total Sales by Kitchen</h3>
+                        <img src="data:image/png;base64,{{ pie_chart }}" alt="Total Sales Pie Chart">
+                    </div> </div>
                         </div>
+                        
+            
+                        
                     </div>
                 </main>
 
