--- a/templates/customer/login.html
+++ b/templates/customer/login.html
@@ -30,6 +30,7 @@
                     <div class="mb-3">
                         <input type="password" class="form-control" name="password" placeholder="Password" required>
                     </div>
+                    <p>Don't Have an Account?<a href="{{ url_for('customer.register_user') }}"> Sign Up</a></p>
                     <div class="d-flex justify-content-center">
                         <button type="submit" class="btn btn-primary w-100">Login</button>
                     </div>
