--- a/templates/customer/header.html
+++ b/templates/customer/header.html
@@ -5,6 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Customer</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link href="{{ url_for('static', filename='css/styles.css') }}" rel="stylesheet" />
+    <style>
+        html, body {
+            height: 100%;
+            margin: 0;
+        }
+        body {
+            display: flex;
+            flex-direction: column;
+        }
+        footer {
+            margin-top: auto;
+        }
+    </style>
 </head>
 <body class="bg-info">
     <!-- Navbar -->
@@ -22,7 +36,7 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ms-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">My Cart</a>
+                        <a class="nav-link" href="{{ url_for('order.get_cart') }}">My Cart</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('order.get_orders_login_user') }}">Orders</a>
@@ -34,4 +48,3 @@
             </div>
         </div>
     </nav>
-    
