--- a/templates/customer/register.html
+++ b/templates/customer/register.html
@@ -42,6 +42,7 @@
                     <div class="mb-3">
                         <input type="text" class="form-control" name="address" placeholder="Address" required>
                     </div>
+                    <p>Already Have an Account?<a href="{{ url_for('customer.login_user') }}"> Sign In</a></p>
                     <div class="d-flex justify-content-center">
                         <button type="submit" class="btn btn-primary w-100">Register</button>
                     </div>
